Fixed post-meta not visible after 425px

--- a/sources/sass/_responsive.scss
+++ b/sources/sass/_responsive.scss
@@ -145,7 +145,7 @@
 	}
 
 	.controls {
-		margin-top: 180px !important;
+		margin-top: 150px !important;
 	}
 
 	.post-title {
